remove transparency on scrollbar and fix usability issues

--- a/static/css/fiddle.less
+++ b/static/css/fiddle.less
@@ -256,6 +256,13 @@ div#source {
 }
 
 .CodeMirror {
+    .CodeMirror-hscrollbar {
+        right: 4px !important;
+        margin-right: 6px;
+    }
+    .CodeMirror-vscrollbar {
+        bottom: 8px !important;
+    }
     .lint-error {
         font-family: arial;
         background: #ffa;
