--- a/static/css/scrollbar.less
+++ b/static/css/scrollbar.less
@@ -1,7 +1,6 @@
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
-    border-radius: 10px !important;
+    background-color: #ffffff;
 }
 
 ::-webkit-scrollbar {
@@ -11,5 +10,6 @@
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px !important;
+    background-color: snow;
     -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, .5) !important;
 }
